--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && scp -r -i ~/.ssh/id_rsa ./build/* eskel4ik@news-explorer-oleg.students.nomoredomainssbs.ru:/home/eskel4ik/frontend"
   },
   "eslintConfig": {
     "extends": [
